# ROS2-diffrobot-thesis

./: .gitignore  frames_2026-04-20_13.11.33.gv
.devcontainer/: Dockerfile  devcontainer.json
docs/: milestones.md  run_nodes.md
notes/lab_attempts/: 2026-04-21-real-robot-failed-attempt.patch
src/: .gitignore
src/gopigo3_aruco/: CMakeLists.txt  note.txt  package.xml
src/gopigo3_aruco/include/: ArucoLocalizer.h
src/gopigo3_aruco/launch/: gopigo3_aruco_detector_sim_launch.py  gopigo3_aruco_localizer_launch.py
src/gopigo3_aruco/markers/: markers.yaml
src/gopigo3_aruco/src/: ArucoLocalizer.cpp  aruco_localizer.cpp
src/gopigo3_map_merger/: package.xml  setup.cfg  setup.py
src/gopigo3_map_merger/gopigo3_map_merger/: map_merger.py  tf_relay.py
src/gopigo3_map_merger/launch/: gopigo3_map_merger_launch.py
src/plotjuggler_layouts/: forward_pid_tuning.xml  linefollow.xml  speedcontrol.xml  umbmark.xml
src/rosaut-gopigo3_ros2-e0b3d4594a55/: CMakeLists.txt  README.md  package.xml
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_description/: CMakeLists.txt  package.xml
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_description/launch/: gopigo3_description_launch.py  gopigo3_rviz_launch.py
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_description/rviz/: gopigo3_single_model_real.rviz  rviz_real_config.rviz
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_description/urdf/: common_properties.xacro  gopigo3.xacro  gopigo3_gazebo.xacro  gopigo3_include.xacro
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_lidar/: CMakeLists.txt  package.xml
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_lidar/launch/: gopigo3_lidar_launch.py  gopigo3_multirobot_lidar_launch.py
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_lidar/src/: ScanProcessor.cpp  scan_processor.cpp
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_navigation/: CMakeLists.txt  package.xml
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_navigation/config/: template_nav2_params.yaml  template_slam_params.yaml
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_navigation/launch/: _localization_launch.py  gopigo3_navigation_launch.py
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_navigation/launch/lib/: gopigo3_navigation_param_module.py
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_navigation/maps/: gopigo3_example_map.pgm  gopigo3_example_map.yaml
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_simulation/: CMakeLists.txt  package.xml
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_simulation/config/: template_gz_bridge_config.yaml
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_simulation/launch/: gopigo3_simulation_common_launch.py  gopigo3_simulation_launch.py  gz_bridge_include_launch.py  gz_include_launch.py
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_simulation/launch/lib/: gopigo3_simulation_param_module.py
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_simulation/rviz/: rviz_sim_config.rviz
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_simulation/worlds/: gopigo3_example_world.sdf
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_teleop/: CMakeLists.txt  package.xml
src/rosaut-gopigo3_ros2-e0b3d4594a55/gopigo3_teleop/launch/: gopigo3_teleop_launch.py
src/rosaut-gopigo3_ros2-e0b3d4594a55/launch/: gopigo3_ros2_launch.py  gopigo3_ros2_localizer_example_sim_launch.py  gopigo3_ros2_mapper_example_sim_launch.py  gopigo3_ros2_two_mappers_example_sim_launch.py
src/rosaut-gopigo3_ros2-e0b3d4594a55/rviz/: localizer_robot_sim.rviz  mapper_robot_sim.rviz
