<?xml version="1.0"?>
<package format="3">
  <name>gopigo3_map_merger</name>
  <version>0.0.0</version>
  <description>Simple multi-robot map merger prototype for GoPiGo3 thesis work</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>